--- a/Java/.classpath
+++ b/Java/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Developer/App/ojdbc8-23.2.0.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
